5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1594_1800.log
== TEST (2019-03-19 16:19:47) 
-- CODE:
expressao= (a**2+b**2+c**2)//(a+b+c)
print(round(expressao,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    expressao= (a**2+b**2+c**2)//(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:20:21) 
-- CODE:
expressao= (1**2+b**2+c**2)//(1+b+c)
print(round(expressao,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    expressao= (1**2+b**2+c**2)//(1+b+c)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:20:40) 
-- CODE:
expressao= (1**2+2**2+3**2)//(1+2+3)
print(round(expressao,6))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:20:43) 
-- CODE:
expressao= (1**2+2**2+3**2)//(1+2+3)
print(round(expressao,6))
-- EXECUTION TIME:
0.24902
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:47) 
-- CODE:
expressao= (1**2+2**2+3**2)//(1+2+3)
print(round(expressao,6))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:19) 
-- CODE:
expressao= (1**2+1**2+1**2)//(1+1+1)
print(round(expressao,6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:22:23) 
-- CODE:
expressao= (1**2+1**2+1**2)//(1+1+1)
print(round(expressao,6))
-- EXECUTION TIME:
0.127596
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
1
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:24:55) 
-- CODE:
expressao= (7**2+5**2+1**2)//(7+5+1)
print(round(expressao,6))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:09:44) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:09:46) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- EXECUTION TIME:
0.172475
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:09:47) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:09:55) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,7))
-- EXECUTION TIME:
0.154159
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:10:00) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:10:02) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- EXECUTION TIME:
0.197974
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:10:03) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:10:36) 
-- CODE:
a=1
b=2
c=3
print(round((a**2+b**2+c**2)/(a+b+c),6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:10:38) 
-- CODE:
a=1
b=2
c=3
print(round((a**2+b**2+c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.205452
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:11:09) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:11:29) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)//(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:24:58) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:15:13) 
-- CODE:
a=1
b=2
c=3
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,7))
-- EXECUTION TIME:
0.145487
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:15:56) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
expressao=(a**2+b**2+c**2)/(a+b+c)
print(round(expressao,7))
-- EXECUTION TIME:
0.125576
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
